// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LoaderButton should not render a loading spinner when loading prop is false 1`] = `
<DocumentFragment>
  <button
    class="btn d-flex justify-content-center align-items-center"
    type="button"
  >
    Test
  </button>
</DocumentFragment>
`;

exports[`LoaderButton should render a loading spinner when loading prop is true 1`] = `
<DocumentFragment>
  <button
    class="btn d-flex justify-content-center align-items-center"
    type="button"
  >
    <div
      aria-label="Loading"
      aria-live="polite"
      class="mdi-icon iconInline loadingSpinner"
      data-loading-spinner="true"
      role="img"
    />
  </button>
</DocumentFragment>
`;
